Added in vSphere Table

--- a/NewDesign_index.html
+++ b/NewDesign_index.html
@@ -383,7 +383,7 @@
                         <!-- Top SNOW CMDB Tbl -->
                         <table align="center" width="100%" style="overflow-x: auto">
                             <tr id="tr-noborder">
-                                <td class="td-nopadding">
+                                <td class="">
                                     <table border="1" width="95%" class="cmdb-tbl">
                                         <col width="35%">
                                         <col width="65%">
@@ -413,7 +413,7 @@
                                         </tr>
                                     </table>  
                                 </td>
-                                <td class="td-nopadding">
+                                <td class="">
                                     <table border="1" width="95%" class="cmdb-tbl">
                                         <col width="30%">
                                         <col width="70%">
@@ -904,6 +904,73 @@
           <div id="vSphere" class="w3-justify w3-text-grey w3-padding-30" style="margin: auto; max-width: 90%;">
             <div class="w3-container w3-padding-32 w3-center w3-black">
                 <h1>vSphere</h1>
+                <div  class="panel-body">
+                        <!-- Top SNOW CMDB Tbl -->
+                        <table align="center" width="100%" style="overflow-x: auto">
+                            <tr id="tr-noborder">
+                                <td class="td-padding">
+                                    <table border="1" width="95%" class="cmdb-tbl">
+                                        <col width="35%">
+                                        <col width="65%">
+                                        <tr>
+                                            <th>ServerName</th>
+                                            <td>GBEDXCOUDB01</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Owning Team Infra</th>
+                                            <td>MSSQL DBA Team</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Environment</th>
+                                            <td>Production</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Class</th>
+                                            <td>Windows</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Active</th>
+                                            <td>True</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Status</th>
+                                            <td>In Service</td>
+                                        </tr>
+                                    </table>  
+                                </td>
+                                <td class="td-padding">
+                                    <table border="1" width="95%" class="cmdb-tbl">
+                                        <col width="30%">
+                                        <col width="70%">
+                                        <tr>
+                                            <th>IP Address</th>
+                                            <td>10.189.3.42</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Operating System</th>
+                                            <td>16</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Model</th>
+                                            <td>32 GB</td>
+                                        </tr>
+                                        <tr>
+                                            <th>CPU</th>
+                                            <td>Windows Server 2012 R2</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Location</th>
+                                            <td>True</td>
+                                        </tr>
+                                        <tr>
+                                            <th>SOx</th>
+                                            <td>False</td>
+                                        </tr>
+                                    </table> 
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
             </div>  
           </div>
 
@@ -1144,8 +1211,7 @@
                 </table>
               </div> 
           </div>
-
-
+            
           <div id="LocalAdmins" class="w3-justify w3-text-grey w3-padding-30" style="margin: auto; max-width: 90%;">
             <div class="w3-container w3-padding-32 w3-center w3-black">
                 <h1>Local Admins</h1>
