--- a/NewDesign_index_2.html
+++ b/NewDesign_index_2.html
@@ -920,49 +920,20 @@
                   <div id="VMHW_Collapse" class="panel-collapse collapse in">
                     <div  class="panel-body">
                         <!-- Top SNOW CMDB Tbl -->
-                        <table align="center" width="100%" style="overflow-x: auto">
-                            <tr id="tr-noborder">
-                                <td class="">
-                                    <table border="1" width="95%" class="cmdb-tbl">
-                                        <col width="35%">
-                                        <col width="65%">
-                                        <tr>
-                                            <th>
-                                                <div class="panel-group w5-content" id="accordion" style="color: black; font-display: block;">
-                                                    <div class="panel panel-default">
-                                                        <div class="panel-heading" id="panel-heading-snow">
-                                                            <h4 class="panel-title">
-                                                                <a data-toggle="collapse" data-parent="#accordion" href="#VMHW_Collapse1">
-                                                                    <b>VM Hardware</b></a>
-                                                            </h4>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </th>
-                                            <td>GBEDXCOUDB01</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Owning Team Infra</th>
-                                            <td>MSSQL DBA Team</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Environment</th>
-                                            <td>Production</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Class</th>
-                                            <td>Windows</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Active</th>
-                                            <td>True</td>
-                                        </tr>
-                                        <tr>
-                                            <th>Status</th>
-                                            <td>In Service</td>
-                                        </tr>
-                                    </table>  
-                                </td>
+                        <table border="1" style="overflow-x: auto" width="95%" class="cmdb-tbl" align="center">
+                            <tr>
+                                <th>
+                                    <div class="panel-group w5-content" id="accordion" style="color: black; font-display: block;">
+                                        <div class="panel panel-default">
+                                            <div class="panel-heading" id="panel-heading-snow">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#accordion" href="#VMHW_Collapse1">
+                                                        <b>VM Hardware</b></a>
+                                                </h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </th>
                             </tr>
                         </table>
                     </div>
